# pykidswro

./: .gitignore  Dockerfile  Dockerfile_curl  README.md  deploy_prepare.sh  docker-compose.yml  docker-compose_BAK.yml  gunicorn.conf.py  pre-commit.sh  pyproject.toml
app/: db.sqlite3  db.sqlite3_bak  requirements.txt  requirements_my.txt  sqlite_dump.sql
app/config/: .env.example  asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
app/config/components/: database.py  database_local.py
app/diary/: apps.py  forms.py  models.py  urls.py  views.py
app/diary/migrations/: 0001_initial.py
app/diary/templates/: base.html  date_list.html  date_list_bak.html  diary_entry.html  diary_entry_success.html
app/lessons/: admin.py  models.py  urls.py  views.py
app/lessons/migrations/: 0001_initial.py  0002_alter_lesson_options_and_more.py  0003_lesson_chapter_lesson_chapter_order_and_more.py  0004_chapter_alter_lesson_chapter.py
app/lessons/templates/: lesson_access_denied.html  lesson_detail.html
app/lessons/templatetags/: lesson_extras.py
app/main/: urls.py  views.py
app/main/templates/: about.html  contact.html  course.html  index.html  site_error.html
app/templates/: base.html  profile.html
app/templates/registration/: login.html
db/: backup.sql  backup_all.sql
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: populate_images.py  populate_lessons.py
static/: about.html  contact.html  course-details.html  courses.html  events.html  index.html  pricing.html  trainers.html
static/assets/css/: custom.css  style.css
