# Эта секция определяет метаданные проекта, такие как имя, версия, описание, авторы и лицензия.
[tool.poetry]
name = "pykids site"
version = "1.0.0"
description = "pykids.pl"
authors = [
    "tier <tier1985@gmail.com>",
]
license = "copyright tier"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.10"

# Секция для зависимостей разработки, которые необходимы только для процесса разработки и не требуются в производственной среде.
[tool.poetry.group.dev.dependencies]
isort = "5.8.0"
flake8 = "3.9.1"
flake8-tuple-unpack-limit = "0.0.1"
mypy = "0.812"
ipython = "^8.8.0"
